<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayoutBasic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_primary_dark"
    tools:context=".fragment.ScientificCalculatorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="@color/ScreenColor"
        android:padding="20dp">

        <TextView
            android:id="@+id/tvResultBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <TextView
            android:id="@+id/etResultBasic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvResultBasic"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/tvResultBasic" />


        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etResultBasic"
            android:orientation="horizontal"

            android:weightSum="2">

            <EditText
                android:id="@+id/etBasicNum1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/firstNum"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/etBasicNum2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etResultBasic"
                android:layout_weight="1"
                android:hint="@string/secondNum"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/add" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnAdd"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/btnAdd"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/Sub" />

            <Button
                android:id="@+id/btnMult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnSub"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/btnSub"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/Mult" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btnMult"
                android:layout_margin="5dp"
                android:layout_toRightOf="@+id/btnMult"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/Div" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>