<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayoutScientific"
    android:background="@color/design_default_color_primary_dark"
    tools:context=".fragment.ScientificCalculatorFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:background="@color/ScreenColor">

        <TextView
            android:id="@+id/tvResultScientific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result" />

        <TextView
            android:id="@+id/etResulScientific"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tvResultScientific"
            android:layout_marginLeft="20dp"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/tvResultScientific" />

        <EditText
            android:id="@+id/etNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etResulScientific"
            android:layout_weight="1"
            android:hint="@string/number"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etNum"
            android:background="@drawable/button"
            android:layout_margin="5dp"
            android:text="@string/log" />

        <Button
            android:id="@+id/btnLogN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btnLog"
            android:layout_toRightOf="@+id/btnLog"
            android:background="@drawable/button"
            android:text="@string/logN" />

    </RelativeLayout>
</RelativeLayout>